--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "zoomkoding.com",
+  "name": "lcypower.github.io",
   "private": false,
   "description": "A neat blog theme for developers",
   "version": "3.0.0",
-  "author": "zoomkoding <zoomkoding@gmail.com>",
+  "author": "lcypower <lcypower0@gmail.com>",
   "dependencies": {
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
